AWS/Document/Document-kienbt/devopsallinone/Module-6/Deployments/deploy-complete.yml
# Simple deployment used to deploy and manage the app in nigelpoulton/ps-web:1.0
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-deploy
  labels:
    app: web
spec:
  selector:
    matchLabels:
      app: web
  replicas: 5
  minReadySeconds: 5
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1
  template:
    metadata:
      labels:
        app: web
    spec: 
      terminationGracePeriodSeconds: 1
      containers:
      - name: hello-pod
        image: kienbt/vietnam:v0.3
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
