AWS/Document/Document-kienbt/devopsallinone/Module-6/Deployments/in.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: app
  namespace: ingress-controller
spec:
  rules:
    # Tên miền truy cập
  - host: tel4vn.edu.vn
    http:
      paths:
      - path: /
        backend:
          # dịch vụ phục vụ tương ứng với tên miền và path
          serviceName: http-test-ingress
          servicePort: 80
