AWS/Document/Document-kienbt/devopsallinone/Module-6/Deployments/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: app
spec:
  rules:
  - host: tel4vn.edu.vn
    http:
      paths:
      - backend:
          serviceName: train-schedule-service
          servicePort: 8080
